--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,12 +40,14 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
     "framer-motion": "^8.4.3",
+    "postcss": "^8.4.40",
     "react-countup": "^6.4.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.4.1",
     "react-scroll": "^1.8.9",
     "react-type-animation": "^2.1.2",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.4.7"
   }
 }
